fix: move the container up to the edge of the to prevent jumping when the keyboard shows up on small screens

--- a/style.css
+++ b/style.css
@@ -167,4 +167,8 @@ table {
       var(--space-around-main-container) * var(--small-screens-factor)
     );
   }
+
+  body {
+    align-items: initial;
+  }
 }
